--- a/_config.yml
+++ b/_config.yml
@@ -12,15 +12,15 @@ keywords: [test, test1, test2]
 
 # Social Links and Variables
 
-twitter_username: jekyllrb
+twitter_username:
 twitter_link:
-github_username:  jekyll
+github_username:
 github_link:
 
 #Pagination Settings
 
 paginate: 5
-paginate_path: "/blog/page:num"
+paginate_path: "/writing/page:num"
 
 # Build Settings
 
