--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,49 @@
 # General Site Global Variables
 
-title: Your awesome title
-description: >-
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-author: Evan Yohe
-baseurl:
-url:
-keywords: [test, test1, test2]
+title               : Evan Yohe Portfolio
+author              : "Evan Yohe"
+baseurl             : "/"
+url                 : "https://evanyohe.github.io"
+description         : "Welcome to my portfolio website; come check out all my writings and share all the updates and progress reports on various projects that I am working on."
+keywords            : ["portfolio", "blog", "technology", "programming", "software", "developer", "data", "science"]
 
 # Social Links and Variables
 
-twitter_username:
-twitter_link:
-github_username:
-github_link:
-linkedIn_username:
-linkedIn_link:
+twitter_username    : "@evan_yohe"
+twitter_link        : "https://twitter.com/evan_yohe"
+github_username     : "EvanYohe"
+github_link         : "https://github.com/EvanYohe"
+linkedin_link       : "https://www.linkedin.com/in/evan-yohe/"
 
-#Pagination Settings
+# Default Front Matter Variables
+
+defaults            :
+  - scope           :
+      path          : ""
+    values          :
+      layout        :
+      title         : 
+      description   :
+      keywords      :
+      autonav       :
+
+#Pagination and Post Rendering Variables
  
-paginate: 5
-paginate_path: "/writing/page:num"
+paginate            : 5
+paginate_path       : "/writings/page:num"
+show_drafts         : true
+unpublished         : true
+future              : true
+strict_front_mater  : true
 
-show_drafts: true
-unpublished: true
+# Build Variables
 
-# Build Settings
-
-plugins:
+safe                : false
+include             : [".htaccess"]
+exclude             : [".sass-cache", ".jekyll-cache", "Gemfile", "Gemfile.lock", "node_modules", "vendor/bundle/", "vendor/cache/", "vendor/gems/", "vendor/ruby/"]
+keep_files          : [".git", ".svn"]
+encoding            : "utf-8"
+markdown_ext        : "markdown,mkdown,mkdn,mkd,md"
+plugins             :
   - github-pages
   - jekyll-paginate
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
